WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234800
Text-decoration color not changing back after input blur with outline removed
https://bugs.webkit.org/show_bug.cgi?id=234800
Summary
Text-decoration color not changing back after input blur with outline removed
hi
Reported
2022-01-02 11:50:56 PST
Created
attachment 448180
[details]
Minimum reproducible example of the issue On a page with multiple input elements that have colored text-decoration, and the color changes on focus: - The text-decoration color doesn't change back to the non-focused style when blurring one input and focusing another, leading to a "stuck" effect. - This issue only occurs when `outline: none;` is specified in the input styles. Steps to reproduce: - Download and open reduction.html (attached) - Tap/click on one input - Tap/click on a different input Observe how the first-focused input keeps the red underline, despite the focus shifting away. The expected result is for only one input to ever have a red underline, as the CSS specifies.
Attachments
Minimum reproducible example of the issue
(515 bytes, text/html)
2022-01-02 11:50 PST
,
hi
no flags
Details
Patch
(4.37 KB, patch)
2022-01-05 12:11 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.44 KB, patch)
2022-01-05 12:31 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.44 KB, patch)
2022-01-05 12:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-05 07:36:02 PST
we are mostly likely missing a repaint when it's a text-decoration-color change only. We trigger repaint when input:focus { text-decoration-color: red; color: green; }
Radar WebKit Bug Importer
Comment 2
2022-01-05 08:07:03 PST
<
rdar://problem/87145636
>
alan
Comment 3
2022-01-05 12:11:41 PST
Created
attachment 448416
[details]
Patch
alan
Comment 4
2022-01-05 12:31:44 PST
Created
attachment 448419
[details]
Patch
alan
Comment 5
2022-01-05 12:52:52 PST
Created
attachment 448421
[details]
Patch
Simon Fraser (smfr)
Comment 6
2022-01-05 13:09:07 PST
Comment on
attachment 448421
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448421&action=review
> LayoutTests/fast/forms/dynamic-text-decoration-change.html:26 > + result.textContent = internals.repaintRectsAsText().length ? "PASS" : "FAIL -no repaint happened";
Would it be better to dump the rects so that we detect if they change?
alan
Comment 7
2022-01-05 13:16:27 PST
(In reply to Simon Fraser (smfr) from
comment #6
)
> Comment on
attachment 448421
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=448421&action=review
> > > LayoutTests/fast/forms/dynamic-text-decoration-change.html:26 > > + result.textContent = internals.repaintRectsAsText().length ? "PASS" : "FAIL -no repaint happened"; > > Would it be better to dump the rects so that we detect if they change?
I don't feel strongly about this but such rect changes (especially with a fix like this) in the past only implied rebaselineing and not actual bugs.
EWS
Comment 8
2022-01-05 21:52:52 PST
Committed
r287674
(?): <
https://commits.webkit.org/r287674
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448421
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug