Text-decoration color not changing back after input blur with outline removed https://bugs.webkit.org/show_bug.cgi?id=234800 <rdar://problem/87145636>

Reviewed by Antti Koivisto.

Source/WebCore:

This patch fixes the case when a decoration type of style value changes on the input
element (e.g. text-decoration-color) and the inner renderer does not get notified through the usual styleDidChange
flow because the property is non-inherited.

Test: fast/forms/dynamic-text-decoration-change.html

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::styleDidChange):

LayoutTests:

* fast/forms/dynamic-text-decoration-change-expected.html: Added.
* fast/forms/dynamic-text-decoration-change.html: Added.



Canonical link: https://commits.webkit.org/245771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287674 268f45cc-cd09-0410-ab3c-d52691b4dbfc